fix gallery artist page portrait artwork too long

--- a/components/GalleryThumbs.module.scss
+++ b/components/GalleryThumbs.module.scss
@@ -10,6 +10,7 @@
 	figure {
 		width: 100%;
 		margin-bottom: 10px;
+		max-width: 20vh;
 		@include mq($from: tablet) {
 			margin-bottom: 20px;
 		}
